# llama3

./: .gitignore  config.py  dataset.py  main.py  model.py  pyproject.toml  tokenizer.py  trainer.py
configs/: dataset_c4.yml  default_trainer.yml  model_300m.yml  model_3b.yml  model_7b.yml  trainer_accum.yml
tokenizers/c4-128k/: tokenizer_config.json
