[project]
name = "llamav3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.1.0",
    "flash-attn>=2.8.3",
    "ninja>=1.13.0",
    "numpy>=2.4.2",
    "packaging>=26.0",
    "psutils>=3.3.14",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
]
[tool.black]
line-length=80
target-version = ['py37']
include = '\.pyi?$'
[tool.isort]
profile = "black"
line_length = 80
